# hakaru-benchmarks

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README-ARTIFACT.md  README.md  SETUP.md  scratch  todo.org
docker/: Dockerfile  README  README.md  init.sh  run.sh  zshrc
input/: .gitignore  Makefile  gen-kos.rkt
input/GmmGibbs/: 80-10000
input/hksrc/: .gitignore  ClinicalTrial.hk  ClinicalTrial.hs  GmmModel.hk  GmmModel.hs  LdaModel.hk  LinearRegression.hk  LinearRegression.hs  Makefile  NaiveBayesModel.hs
input/kos/: docs  words
input/news_t/: docs  topics  words
other/: Makefile
other/cmdstan-2.18.1/: classify.px  gmm.stan  startup.patch
other/cmdstan-2.18.1/stan/src/stan/mcmc/hmc/hamiltonians/: base_hamiltonian.hpp
other/cmdstan-2.18.1/stan/src/stan/services/util/: generate_transitions.hpp
output/: GmmGibbsAccuracy.rkt  GmmGibbsAccuracyPlot.rkt  GmmGibbsTimePlot.rkt  LdaLikelihood.rkt  LdaLikelihoodPlot.rkt  NaiveBayesAccuracy.rkt  NaiveBayesLiklihood.rkt  README.md  addrow1.sh  merge-legends.rkt  plot-tsa.rkt  plots.r  psi-clinical-trial  psi-clinical-trial1  psi-linear-regression
output/ClinicalTrial/rkt/: 10  100  1000  10000
output/GmmGibbs/hk/: 9-1000
output/GmmGibbs/jags/: 9-1000
output/GmmGibbs/rkt/: 3-10  6-100  6-100-debug  6-1000  9-1000-before-rescaling  9-1000-rescaled
output/LinearRegression/rkt/: 10  100  1000  10000
output/accuracies/: plots.r
output/accuracies/GmmGibbs/augur/: 25-5000  50-10000
output/accuracies/GmmGibbs/hk/: 25-5000  50-10000  6-100  9-1000
output/accuracies/GmmGibbs/jags/: 25-5000  50-10000  6-100  9-1000
output/accuracies/GmmGibbs/rkt/: 25-5000  50-10000  9-1000
output/accuracies/GmmGibbs/stan/: 25-5000  50-10000
output/accuracies/LdaGibbs/: augur  rkt
output/accuracies/NaiveBayesGibbs/augur/: 20-19997-10
output/accuracies/NaiveBayesGibbs/jags/: 20-19997-10
output/accuracies/NaiveBayesGibbs/rkt/: 20-19997-10
runners/: Makefile
runners/accuracy/: GmmGibbs.hs
runners/augur/: compiletime  config.yml  gmm.py  lda.py  lda1d.py  nb.py
runners/hk/: GetNews.hs  MainTemplate.hs  Makefile  News.hs  Utils.hs  benchmark.cabal  header  stack.yaml
runners/hk/ClinicalTrial/: Main.hs  Prog.hs
runners/hk/GmmGibbs/: Accuracy.hs  Log.hs  Main.hs  Prog.hs  Prog4.hs
runners/hk/GmmGibbsSham/: Main.hs
runners/hk/LdaGibbs/: LdaLikelihood.hs  Likelihood.hs  Main.hs  Prog.hs  Prog2.hs
runners/hk/LinearRegression/: Main.hs  Prog.hs
runners/hk/NaiveBayesGibbs/: Likelihood.hs  Main.hs  MainProg.hs  NaiveBayesLikelihood.hs  Prog.hs  Prog3.hs  Prog4.hs
runners/psi/: clinicalTrial.sh  linearRegression.sh
runners/rkt/: ClinicalTrial.rkt  ClinicalTrialNoInfo.rkt  GmmGibbs.rkt  GmmGibbsOpt.rkt  GmmGibbsOptBench.rkt  GmmGibbsOptHoldout.rkt  GmmGibbsOptSham.rkt  GmmGibbsSham.rkt  LdaGibbs.rkt  LdaGibbsOpt.rkt  LdaLikelihood.rkt  LinearRegression.rkt  LinearRegressionOpt.rkt  NBAccuracy.rkt  NBBench.rkt  NBWrap.c  NaiveBayesGibbs.rkt  NaiveBayesGibbsOpt.rkt  NaiveBayesGibbsOptSham.rkt  NaiveBayesGibbsSham.rkt  NaiveBayesGibbsSo.rkt  clinicalTrial.rkt  discrete.rkt  gmm-utils.rkt  gmm_gibbs_simp.rkt  ldazgibbs.rkt  linearRegression.rkt  naive_bayes_gibbs.rkt  nb.ll  template.rkt  utils.rkt
runners/rkt/bench/: gmmfull.rkt  gmmnoruntime.rkt  gmmnosummary.rkt  gmmnothing.rkt
testcode/hkrkt/: ClinicalTrial.hkr  GmmGibbs.hkr  LdaGibbs.hkr  LdaGibbs_Z.hkr  LdaLikelihood.hkr  LinearRegression.hkr  Makefile  NaiveBayesGibbs.hkr  clinicalTrial_simp.hkr  gmm_gibbs_simp.hkr  lda_gibbs_simp.hkr  ldall.hkr  linearRegression_simp.hkr  naive_bayes_gibbs_simp.hkr
testcode/hksimp/: GmmGibbsSimp.hk  LdaGibbsSimp.hk  LdaLikelihoodSimp.hk  LinearRegressionSimp.hk  Makefile  NaiveBayesGibbsSimp.hk
testcode/hksrc/: GmmGibbs.hk  LdaGibbs.hk  LdaGibbs_ThetaPhi.hk  LdaGibbs_Z.hk  LdaLikelihood.hk  NaiveBayesGibbs.hk  NaiveBayesLikelihood.hk
testcode/hssrc/: ClinicalTrial.hs  GmmGibbs.hs  LdaGibbs.hs  LdaGibbs_ThetaPhi.hs  LdaLikelihood.hs  LinearRegression.hs  Makefile  NaiveBayesGibbs.hs  clinicalTrial_simp.hs  gmm_gibbs_simp.hs  lda_gibbs_simp.hs  linearRegression_simp.hs  naive_bayes_gibbs_simp.hs  nb_simpbucket.hs
testcode/jagssrc/: GMM.hs  GmmModel.R  GmmModel.jags  LdaModel.jags  NaiveBayesModel.R  NaiveBayesModel.jags  gmmModel.R  gmmModel.jags
testcode/mallet/: .gitignore  Makefile
testcode/psisrc/: ct10.psi  ct20.psi  ct30.psi  ct40.psi  ct50.psi  ct60.psi  ct70.psi  ct80.psi  ct90.psi  lr10.psi  lr100.psi  lr20.psi  lr200.psi  lr30.psi  lr300.psi  lr40.psi  lr400.psi  lr50.psi  lr500.psi  lr60.psi  lr600.psi  lr70.psi  lr700.psi  lr80.psi  lr800.psi  lr90.psi  lr900.psi
