name:                benchmark
version:             0.1
synopsis:            package for testing hakaru
author:              Rajan Walia
maintainer:          walrajan@gmail.com

build-type:          Simple
cabal-version:       >=1.16

Executable ClinicalTrial
    Main-is:           Main.hs
    Hs-Source-Dirs:    ClinicalTrial
    Default-Language:  Haskell2010
    GHC-Options:       -O2 -Wall -fwarn-tabs
    other-modules:     Prog
    build-depends:     base                 >= 4.7  && < 5.0,
                       mwc-random           >= 0.13 && < 0.14,
                       hakaru               >= 0.4,
                       logfloat             >= 0.13 && < 0.14,
                       text                 >= 0.11 && < 1.3,
                       pretty               >= 1.1  && < 1.2,
                       filepath             >= 1.3,
                       vector               >= 0.10,
                       filepath             >= 1.1,
                       bytestring           >= 0.10
